
[package]
name = "interthread"
version = "1.2.2"
edition = "2021"
description = "Auto implementation of the Actor Model"
categories = ["development-tools", "asynchronous"]
license = "MIT OR Apache-2.0"
authors = ["Simon Nour"]
repository = "https://github.com/NimonSour/interthread.git"
keywords = ["actor","async","thread","interthread","actor-model"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]

syn   = { version = "2.0.37", features = ["parsing","full","extra-traits"]}
quote            = "1.0.33" 
proc-macro2      = "1.0.67" 
proc-macro-error = "1.0.4"
proc-macro-crate = "1.3.1"
prettyplease     = "0.2.10"

[dev-dependencies]
smol          = "1.3.0"
oneshot       = "0.1.6"
async-channel = "1.8.0"
tokio         = { version= "1.32.0" ,features=["full"] }
async-std     = { version = "1.12.0", features = ["attributes"] }