
[package]
name = "interthread"
version = "2.0.0"
edition = "2021"
description = "Auto implementation of the Actor Model"
categories = ["development-tools", "asynchronous"]
license = "MIT OR Apache-2.0"
authors = ["Simon Nour"]
repository = "https://github.com/NimonSour/interthread.git"
keywords = ["actor","async","thread","interthread","actor-model"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true



[dependencies]

syn   = { version = "2.0.65", features = ["parsing","full","extra-traits"]}
quote            = "1.0.36" 
proc-macro2      = "1.0.83" 
proc-macro-error = "1.0.4"
proc-macro-crate = "3.1.0" 
prettyplease     = "0.2.20"

[dev-dependencies]
smol          = "2.0.0"
oneshot       = "0.1.6"
async-channel = "2.3.1"
tokio         = { version= "1.37.0" ,features=["full"] }
async-std     = { version = "1.12.0", features = ["attributes"] }

