
[package]
name = "interthread"
version = "3.1.0"
edition = "2021"
description = "Auto implementation of the Actor Model"
categories = ["development-tools", "asynchronous"]
license = "MIT OR Apache-2.0"
authors = ["Simon Nour"]
repository = "https://github.com/NimonSour/interthread.git"
keywords = ["actor","async","thread","interthread","actor-model"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true



[dependencies]

syn   = { version = "2.0.103", features = ["parsing","full","extra-traits"]}
quote            = "1.0.40" 
proc-macro2      = "1.0.95" 
proc-macro-error = "1.0.4"
proc-macro-crate = "3.3.0" 
prettyplease     = "0.2.34"


[dev-dependencies]
smol          = "2.0.2"
oneshot       = "0.1.11"
async-channel = "2.3.1"
tokio         = { version= "1.45.1" ,features=["full"] }
async-std     = { version = "1.13.1", features = ["attributes"] }
