[package]
name = "interthread_macro"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true


[dependencies]

quote = { version = "1" }
syn   = { version = "2", features = ["parsing","full","extra-traits"]}
proc-macro2 = { version = "1" }
proc-macro-error = { version = "1" }



